--- a/FitnessApp/Pages/ProfilePage.razor
+++ b/FitnessApp/Pages/ProfilePage.razor
@@ -32,20 +32,19 @@
     {
         @foreach (var ticket in tickets)
         {
-            <div>
-                <p>Valid: @ticket.Valid</p>
+            <div class="card">
+                <p>Barcode: @ticket.Barcode</p>
                 <p>IssueDate: @ticket.IssueDate</p>
                 <p>Entries Remained: @ticket.NumOfEntries</p>
-            <p>IsValid: @ticket.Valid</p>
+                <p>IsValid: @ticket.Valid</p>
+                <p>Price: @ticket.BuyPrice</p>
             </div>
         }
-
     }
     else
     {
         <p>No tickets yet.</p>
     }
-
 }
 
 @if (isLoading)
@@ -54,6 +53,11 @@
 }
 
 @code {
+    private void OnSelected(string selection)
+    {
+        Console.WriteLine(selection);
+    }
+    private string selectedColor;
     private string clientBarcode = "";
     private List<ClientTickets> tickets = new List<ClientTickets>();
     private Clients client = new Clients();
