--- a/FitnessApp/Shared/NavMenu.razor
+++ b/FitnessApp/Shared/NavMenu.razor
@@ -43,6 +43,12 @@
                     </NavLink>
                 </div>
 
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="entries">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Entries
+                </NavLink>
+            </div>
+
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="entry">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Entry
