--- a/FitnessApp/Shared/Dropdown.razor
+++ b/FitnessApp/Shared/Dropdown.razor
@@ -7,7 +7,7 @@
     </button>
     <CascadingValue name="Dropdown" Value="@this">
         <div class="dropdown-menu @(show? "show":"")">
-            @ItemContent
+            @ChildContent
         </div>
     </CascadingValue>
 </div>
@@ -16,7 +16,7 @@
     [Parameter]
     public RenderFragment InitialTip { get; set; }
     [Parameter]
-    public RenderFragment<TItem> ItemContent { get; set; }
+    public RenderFragment ChildContent { get; set; }
     [Parameter]
     public EventCallback<TItem> OnSelected { get; set; }
 
