--- a/FitnessApp/Shared/DropdownListItem.razor
+++ b/FitnessApp/Shared/DropdownListItem.razor
@@ -1,13 +1,13 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @typeparam TItem
-<a class="dropdown-item" Item="@Item" @onclick="e=> Dropdown.HandleSelect(Item, ItemContent)">@Item</a>
+<a class="dropdown-item" Item="@Item" @onclick="e=> Dropdown.HandleSelect(Item, ChildContent)">@ChildContent(Item) </a>
 
 @code {
-    [CascadingParameter(Name = "Dropdown")] 
+    [CascadingParameter(Name = "Dropdown")]
     public Dropdown<TItem> Dropdown { get; set; }
 
     [Parameter]
     public TItem Item { get; set; }
     [Parameter]
-    public RenderFragment<TItem> ItemContent { get; set; }
+    public RenderFragment<TItem> ChildContent { get; set; }
 }
