--- a/FitnessApp/Pages/ProfilePage.razor
+++ b/FitnessApp/Pages/ProfilePage.razor
@@ -23,7 +23,7 @@
 
 <input type="text" @bind="clientBarcode" />
 
-<button @onclick="ValidateBarcodeAsync">Submit</button>
+<button class="btn btn-primary" @onclick="ValidateBarcodeAsync">Submit</button>
 
 @if (dataLoaded)
 {
