--- a/FitnessApp/Pages/Login.razor
+++ b/FitnessApp/Pages/Login.razor
@@ -12,28 +12,26 @@
             <div class="alert alert-danger">@Message</div>
         }
         <EditForm Model="@user" OnValidSubmit="@ValidateUser" Context="editFormContext">
-            <div>
+            <div class="custWidth">
                 <br /><br /><br /><br /><br />
-            </div>
-            <div>
-                <h3 style="font-weight:bold; color:purple">FitnessApp Admin Login</h3>
-            </div>
-            <div>
+                <div>
+                    <h3 style="font-weight:bold; color:purple">FitnessApp Admin Login</h3>
+                </div>
+                    <br />
+                <div class="row">
+                    <input class="form-control " @bind="user.EmailAddress" placeholder="email address" />
+                </div>
+                <br />
+                <div class="row">
+                    <input type="password" class="form-control" @bind="user.Password" placeholder="password" />
+                </div>
+                <br />
+                <div class="row">
+                    <span class="col-12"></span>
+                    <input type="submit" class="form-control btn btn-primary" value="Login" />
+                </div>
                 <br />
             </div>
-            <div class="col-12 row">
-                <input class="form-control col-12" @bind="user.EmailAddress" placeholder="email address" />
-            </div>
-            <br />
-            <div class="col-12 row">
-                <input type="password" class="form-control col-12" @bind="user.Password" placeholder="password" />
-            </div>
-            <br />
-            <div class="col-12 row">
-                <span class="col-12"></span>
-                <input type="submit" class="form-control col-6 btn btn-primary" value="Login" />
-            </div>
-            <br />
         </EditForm>
     </NotAuthorized>
     <Authorized>
