--- a/FitnessApp/Pages/ClientsPage.razor.css
+++ b/FitnessApp/Pages/ClientsPage.razor.css
@@ -105,3 +105,11 @@ h1 {
 .dropdown.show .dropdown-menu {
     display: block;
 }
+
+.search-input {
+   margin-top: 50px;
+}
+
+.search-button {
+    margin-top: 5px;
+}
